# TokucuEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Dependencies/Assimp/lib/Debug/: assimp-vc143-mtd.exp
Dependencies/GLAD/include/GLAD/: glad.h
Dependencies/GLAD/src/: glad.c
Sandbox/: CMakeLists.txt  imgui.ini
Sandbox/assets/models/Glock/: MDL_Glock.fbx
Sandbox/assets/models/Helmet/: sci_fi_space_helmet_by_aliashasim.fbx
Sandbox/assets/models/shotgun/: ShotgunTri.fbx
Sandbox/assets/shaders/: BRDFFrag.spv  BRDFShader.frag  BRDFShader.vert  BRDFVert.spv  compile.bat  cubemapConvFrag.spv  cubemapConvVert.spv  cubemapConvolution.frag  cubemapConvolution.vert  frag.spv  geom.spv  prefilterShader.frag  prefilterShader.geom  prefilterShaderFrag.spv  shader.frag  shader.geom  shader.vert  shaderPL.frag  shaderPL.vert  shadowFrag.spv  shadowGeom.spv  shadowShader.frag  shadowShader.geom  shadowShader.vert  skyboxFrag.spv  skyboxHDRFrag.spv  skyboxHDRGeom.spv  skyboxHDRShader.frag  skyboxHDRShader.vert  skyboxHDRVert.spv  skyboxShader.frag  skyboxShader.vert  vert.spv  vertPL.spv
Sandbox/src/: SandboxApp.cpp
TokucuEngine/: CMakeLists.txt  TEXTURE_OPTIMIZATION_SUMMARY.md
TokucuEngine/src/: Tokucu.h  tkcpch.h
TokucuEngine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
TokucuEngine/src/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCore.cpp  VulkanCore.h  VulkanCreateImage.cpp  VulkanCreateImage.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTextureManager.cpp  VulkanTextureManager.h
TokucuEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
TokucuEngine/src/Tokucu/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
TokucuEngine/src/Tokucu/Core/: ThreadPool.h
TokucuEngine/src/Tokucu/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
TokucuEngine/src/Tokucu/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  SceneEditor.cpp  SceneEditor.h
TokucuEngine/src/Tokucu/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  FBXLoader.cpp  FBXLoader.h  GraphicsContext.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ObjectAttributes.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderSrc.h  Texture.h  VertexArray.cpp  VertexArray.h
VulkanRenderer.git/: config  packed-refs
VulkanRenderer.git/objects/pack/: pack-a1d9e79def66c7d42bcf2341cd3e7246f436f4ed.idx  pack-a1d9e79def66c7d42bcf2341cd3e7246f436f4ed.pack  pack-a1d9e79def66c7d42bcf2341cd3e7246f436f4ed.rev
